Update 09-Objects and Data Structures Assessment Test.ipynb

--- a/00-Python Object and Data Structure Basics/09-Objects and Data Structures Assessment Test.ipynb
+++ b/00-Python Object and Data Structure Basics/09-Objects and Data Structures Assessment Test.ipynb
@@ -31,15 +31,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Numbers:\n",
+    "Numbers:\n", In python, numbers are basically of two types which are integers or floats. Example of integers are 3, 23, 553444. Example of floats are 1.5, 2.555, pi
     "\n",
-    "Strings:\n",
+    "Strings:\n", The are a collections of letters and numbers which can be stringed together to form words. They are denoted using the double or single quote notation. Example are "This is a string", 'I know this is 1 2'.
     "\n",
-    "Lists:\n",
+    "Lists:\n", List are an ordered set of data in python. The fact that they are ordered makes them mutable, i.e. you can reference them using their index and then change the value. It is possible for list to be nested in other lists and also they have integer indexing.
     "\n",
-    "Tuples:\n",
+    "Tuples:\n", Like list, tuples are also an ordered way of storing data. Unlike list, tuples are immutable, which means the value cannot be changed. It is possible to unpack a tuple but the assignment variable must be referenced exactly the way teh tuple was created otherwise it will generate an error. Tuples also have integer indexing.
     "\n",
-    "Dictionaries:\n"
+    "Dictionaries:\n"Unlike list and tuples, dictionary are an unordered set of elements in python. This means they cannot be referenced but they have  a key value pair way of storing elements.
    ]
   },
   {
